# phono-sim

./: README.md  pyproject.toml
.github/workflows/: pylint.yml  release.yaml
src/: model_factory.py  setup.py
src/language/: en_gb.py
src/phone_similarity/: base_bit_array_generator.py  base_bit_array_specification.py  bit_array_generator.py  bit_array_specification.py  clean_phones.py  distance.py  entropy_analyzer.py  intersecting_bit_array_specification.py  model_factory.py  phones_product.py  raw_phone_features.py  utils.py
src/phone_similarity/g2p/charisu/: generator.py  load_dictionary.py
src/phone_similarity/g2p/charsiu/: __init__.py  generator.py  load_dictionary.py
src/phone_similarity/language/: __init__.py  combined.py  da.py  de.py  en_gb.py  eng_us.py  es.py  fr.py  fra.py  geo.py  ger.py  gre.py  ita.py  lat_clas.py  nl.py  por_bz.py  por_po.py  rus.py  spa.py  sqi.py
tests/: test_bits_per_word.py  test_charisu_g2p.py  test_charsiu_dictionary_metrics.py  test_cognates.py  test_french_dictionary_metrics.py  test_generator_caching.py  test_language_comparison.py  test_max_syllable_length.py  test_model_factory.py  test_parsing.py  test_splitting.py
