[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phone-similarity"
version = "0.0.1"
description = "A library dedicated to providing phonological distance and similarity metrics."
authors = [{name = "Kleber Noel"}]
readme = "README.md"
requires-python = ">=3.7,<4"
keywords = ["phone", "phonological", "phonetic", "similarity", "ipa", "phonetics", "distance", "bitarray", "jiwer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "transformers>=4.34,<5",
    "bitarray",
    "langcodes[data]",
    "numpy>=1.24",
    "torch>=2,<3",
    "jiwer>=4"
]

[tool.setuptools.packages.find]
where = ["src"]
